# hackers_n8n_automation

./: .gitignore  README.md
docs/: 해커스 강의 개요.md
lecture_note/: 01차시 학습노트.md  02차시 학습노트.md  03차시 학습노트.md  04차시 학습노트.md  05차시 학습노트.md  06차시 학습노트.md  07차시 학습노트.md  08차시 학습노트.md  09차시 학습노트.md  10차시 학습노트.md  11차시 학습노트.md  12차시 학습노트.md  13차시 학습노트.md  14차시 학습노트.md  15차시 학습노트.md  16차시 학습노트.md  17차시 학습노트.md  18차시 학습노트.md  1차시 학습노트.md  3차시 학습노트.md  4차시 학습노트.md  5차시 학습노트.md  6차시 학습노트.md  7차시 학습노트.md  8차시 학습노트.md  9차시 학습노트.md  무료차시 학습노트.md
source_workflow/04/: app.js  package-lock.json  package.json
source_workflow/05/: app.js  test_auth.http  test_supa.http  todos.json  todotable.sql
source_workflow/10/: 10-1. Telegram Agent.json  10-3. SubAgent.json  10-4. RAG Vector Store.json
source_workflow/10th/: 10-2. VoiceAgent.json  10-3. Calendar SubAgent.json
source_workflow/11th/: 11. survey_report.json
source_workflow/13/: 13. survey_backend.json
source_workflow/14/: 14. AI New Curation - Query.json  14. AI News Curation - Ingest.json  root_cause_gem.md
source_workflow/17/: 17. Match Youtubers Agent1.json  17. Match Youtubers Agent2.json  17. Match Youtubers Agent3.json
source_workflow/18/adk-hello/: pyproject.toml  requirements.txt
source_workflow/18/adk-hello/hackers_agent/tmp/hackers_agent/: blogger_workflow.yaml  researcher_agent.yaml  writer_agent.yaml
source_workflow/18/adk-hello/hello_world_agent/: __init__.py
source_workflow/18/adk-hello/test_agent/: root_agent.yaml
source_workflow/18th/: 18. AI News Curation For Workflow call.json  (+1 more)
(+249 files in other folders)
